--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -19,24 +19,36 @@
 
 	#loginArea{
 		box-sizing: border-box;
-		width: 300px;
-		height: 200px;
+		width: 400px;
+		height: 250px;
 		margin: 20px;
-		border: 2px solid black;
-		border-radius: 10px;
 		padding: 2%;
 		float: left;
 		text-align: left;
+
+      background: #fff;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
 	}
 	#NoticeArea{
 		box-sizing: border-box;
- 		width: 800px;
-		height: 200px;
+ 		width: 900px;
+		height: 250px;
 		margin: 20px;
-		border: 2px solid black;
-		border-radius: 10px;
 		padding: 2%;
 		float: left;
+		
+		background: #fff;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
 	}
 	
 	#surveyArea{
@@ -44,9 +56,16 @@
 		width: 800px;
 		height: auto;
 		margin: 20px;
-		border-right: solid 2px black;
-  		border-left: solid 2px black;
 		padding: 3%;
+		display: inline-block;
+		
+		background: #fff;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
 	}
 	
 	#surveyListArea{
