--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -1,176 +1,216 @@
 @charset "EUC-KR";
-	#logoLine{
-		border: 0px;
-		height: 30px;
-		background-color: black;
-		border-radius: 5px;
-	}
- 	#contentsArea{
-		width: auto;
-		height: auto;
-		text-align: center;
-	}
+
+#logoLine {
+	border: 0px;
+	height: 30px;
+	background-color: black;
+	border-radius: 5px;
+}
+
+#contentsArea {
+	height: auto;
+	text-align: center;
+}
+
+#upperArea {
+	width: 1200px;
+	height: auto;
+	display:inline-block;
+}
+
+#loginArea {
+	box-sizing: border-box;
+	width: 30%;
+	height: 250px;
+	margin: 20px;
+	padding: 2%;
+
+	text-align: left;
+	display: inline-block;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	background: #fff;
+}
+
+#NoticeArea {
+	box-sizing: border-box;
+	width: 60%;
+	height: 250px;
+	margin: 20px;
+	padding: 2%;
 	
-	#upperArea{
-		width: auto;
-		height: auto;
-		display: inline-block;
-	}
 
-	#loginArea{
-		box-sizing: border-box;
-		width: 400px;
-		height: 250px;
-		margin: 20px;
-		padding: 2%;
-		float: left;
-		text-align: left;
-
-      background: #fff;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      border-radius: 10px;
-      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
-	}
-	#NoticeArea{
-		box-sizing: border-box;
- 		width: 700px;
-		height: 250px;
-		margin: 20px;
-		padding: 2%;
-		float: left;
-		
-		background: #fff;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      border-radius: 10px;
-      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-	}
+ 	display: inline-block;
+	background: #fff;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
 	
-	#surveyArea{
-		box-sizing: border-box;
-		width: 800px;
-		height: auto;
-		margin: 20px;
-		padding: 3%;
-		display: inline-block;
-		
-		background: #fff;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      border-radius: 10px;
-      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-	}
+	padding: 3%; border: 1px solid #eee; border-left-color: #777; border-left-width: 5px; border-radius: 3px; float: left
+}
+
+#surveyArea {
+	box-sizing: border-box;
+	width: auto;
+	height: auto;
+	margin: 20px;
+	padding: 3%;
+	display: inline-block;
+	background: #fff;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+}
+
+#surveyListArea {
+	box-sizing: border-box;
+	width: auto;
+	height: auto;
+	border: 2px solid black;
+	border-radius: 10px;
+	padding: 2%;
+	display: inline-block;
+}
+
+.SirBay {
+	display: block;
+	margin: 0px auto;
+}
+
+.login-Button {
+	left: 173px;
+}
+
+.register-Button {
+	bottom: 53px;
+	left: 73px;
+}
+
+.input-form {
+	max-width: 680px;
+	margin-top: 80px;
+	padding: 32px;
+	background: #fff;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
+}
+
+.radio-Button {
+	padding-bottom: 10px;
+}
+
+/* 마이페이지 css 시작 */
+.form-control:focus {
+	box-shadow: none;
+	border-color: #BA68C8
+}
+
+.profile-button {
+	background: rgb(99, 39, 120);
+	box-shadow: none;
+	border: none
+}
+
+.profile-button:hover {
+	background: #682773
+}
+
+.profile-button:focus {
+	background: #682773;
+	box-shadow: none
+}
+
+.profile-button:active {
+	background: #682773;
+	box-shadow: none
+}
+
+.back:hover {
+	color: #682773;
+	cursor: pointer
+}
+
+.labels {
+	font-size: 15px
+}
+
+.add-experience:hover {
+	background: #BA68C8;
+	color: #fff;
+	cursor: pointer;
+	border: solid 1px #BA68C8
+}
+
+.unregister {
+	margin-bottom: 20px;
+}
+
+.input-form-mypage {
+	margin: 0 auto;
+	padding: 32px;
+	background: #fff;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+	box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+}
+
+.callout {
+	padding: 20px;
+	margin: 20px 0;
+	border: 1px solid #eee;
+	border-left-width: 5px;
+	border-radius: 3px; h4 { margin-top : 0;
+	margin-bottom: 5px;
+}
+
+p:last-child {
+	margin-bottom: 0;
+}
+
+code {
+	border-radius: 3px;
+}
+
+&
++
+.bs-callout {
+	margin-top: -5px;
+}
+
+}
+@
+each $name, $color in (default, #777), (primary, #428bca), (success,
+	#5cb85c), (danger, #d9534f), (warning, #f0ad4e), (info, #5bc0de), (bdc,
+	#29527a) { .callout- #{$name
 	
-	#surveyListArea{
-		box-sizing: border-box;
-		width: auto;
-		height: auto;
-		border: 2px solid black;
-		border-radius: 10px;
-		padding: 2%;
-		display: inline-block;
-		
+}
+
+{
+border-left-color: $color ; h4 {
+	color: $color;
+}
+}
+
+a[class=text]{
+		font-weight:bold;
 	}
-	
-	.SirBay{
-		display:block;
-    	margin:0px auto;
-	}
-	
-	.login-Button{
-	    left: 173px;
-	}
-	
-	.register-Button{
-		bottom: 53px;
-	    left: 73px;
+}
 
-	}
-	.input-form {
-      max-width: 680px;
-
-      margin-top: 80px;
-      padding: 32px;
-
-      background: #fff;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      border-radius: 10px;
-      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
-    }
-    
-    
-    .radio-Button{
-        padding-bottom: 10px;
-    }
-    
-    /* 마이페이지 css 시작 */
-    
-    .form-control:focus {
-        box-shadow: none;
-        border-color: #BA68C8
-    }
-
-    .profile-button {
-        background: rgb(99, 39, 120);
-        box-shadow: none;
-        border: none
-    }
-
-    .profile-button:hover {
-        background: #682773
-    }
-
-    .profile-button:focus {
-        background: #682773;
-        box-shadow: none
-    }
-
-    .profile-button:active {
-        background: #682773;
-        box-shadow: none
-    }
-
-    .back:hover {
-        color: #682773;
-        cursor: pointer
-    }
-    
-    .labels {
-        font-size: 15px
-    }
-
-    .add-experience:hover {
-        background: #BA68C8;
-        color: #fff;
-        cursor: pointer;
-        border: solid 1px #BA68C8
-    }
-    
-    .unregister {
-    	margin-bottom: 20px;
-    }
-    
-	.input-form-mypage {
-      margin:0 auto;
-      padding: 32px;
-
-      background: #fff;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      border-radius: 10px;
-      -webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      -moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-      box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-    }
-    
-    /* 마이페이지 css 끝 */
+/* 마이페이지 css 끝 */
